--- a/apps/web/components/FaultyTerminal.css
+++ b/apps/web/components/FaultyTerminal.css
@@ -3,4 +3,5 @@
   height: 100%;
   position: relative;
   overflow: hidden;
+  background-color: #000;
 }
